src/objects/Plant_Pkg__c.object
<CustomObject>
    <fields>
        <fullName>Package__c</fullName>
        <formula>Pkg_Size__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg_Size__c</fullName>
        <label>Pkg Size</label>
        <referenceTo>Pkg_Size__c</referenceTo>
        <relationshipLabel>Plant-Pkg</relationshipLabel>
        <relationshipName>Plant_Pkg</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PlantName__c</fullName>
        <formula>Plant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlantName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Plant-Pkg</relationshipLabel>
        <relationshipName>Plant_Pkg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Plant-Pkg</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PlantName__c</columns>
        <columns>Pkg_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPID-{0000000000}</displayFormat>
        <label>Plant-Pkg ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant-Pkg</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>